<resources>
    <string name="app_name">Oxygen\nReport</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="pin">Pin</string>
    <string name="email">Email</string>
    <string name="mo_no">Mo. No</string>
    <string name="user_id_name">User ID Name</string>
    <string name="confirm_npassword">Confirm\nPassword</string>
    <string name="city">City</string>
    <string name="submit">Submit</string>
    <string name="state">State</string>
    <string name="user_id">User Id</string>
    <string name="patient">Patient</string>
    <string name="hospital_name">Hospital\nName</string>
    <string name="spo2">SPO2</string>
    <string name="heart_nrate">Heart\nRate</string>
    <string name="body_ntemp">Body\nTemp</string>
    <string name="mrt">MRT</string>
    <string name="blood_npressure">Blood\nPressure</string>
    <string name="rr">RR</string>
    <string name="pdf">pdf</string>
    <string name="print">print</string>
    <string name="log_out">Log Out</string>
</resources>