<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="#7685D5"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_activity_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/viewshape"
                android:hint="@string/user_name"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:textColor="#11B518"
                android:textColorHint="#11B518"
                android:textSize="19sp"
                tools:ignore="RtlSymmetry"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/viewshape"
                app:boxBackgroundMode= "none"
                app:boxBackgroundColor="@color/black"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/black"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#11B518"
                    android:textColorHint="#11B518"
                    android:paddingStart="10dp"
                    android:paddingTop = "10dp"
                    android:textSize="19sp"
                    tools:ignore="Deprecated,RtlSymmetry,TextViewEdits"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="141dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginbutton"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <!--    View Tag for drawing horizontal line-->
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="10dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/create_new_account"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background_shape"
                android:text="@string/register"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>