<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/registration_activity_background"
        tools:ignore="UselessParent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:columnOrderPreserved="true"
            android:rowCount="11">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/first_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="105dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:background="@drawable/viewshape"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/last_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:paddingStart="10dp"
                android:layout_marginEnd="105dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                android:paddingTop="3dp"
                android:textColor="@color/black"
                android:inputType="text"
                android:background="@drawable/viewshape"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/address"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="105dp"
                android:paddingStart="10dp"
                android:padding="10dp"
                android:textSize="18sp"
                android:paddingTop="3dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:background="@drawable/viewshape"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/city"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:paddingStart="10dp"
                android:layout_marginEnd="105dp"
                android:textSize="18sp"
                android:paddingTop="3dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:inputType="text"
                android:background="@drawable/viewshape"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/state"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:paddingStart="10dp"
                android:layout_marginEnd="105dp"
                android:paddingTop="3dp"
                android:textSize="18sp"
                android:paddingEnd="10dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:background="@drawable/viewshape"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/pin"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/pin_code"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:layout_marginEnd="105dp"
                android:paddingTop="3dp"
                android:textColor="@color/black"
                android:inputType="number"
                android:background="@drawable/viewshape"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:textSize="18sp"
                android:layout_marginEnd="105dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:paddingTop="3dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/viewshape"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/mo_no"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/mobile_no"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:textSize="18sp"
                android:paddingEnd="10dp"
                android:layout_marginEnd="105dp"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:inputType="phone"
                android:background="@drawable/viewshape"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/user_id_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/user_id_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:textSize="18sp"
                android:layout_marginEnd="105dp"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:inputType="text"
                android:background="@drawable/viewshape"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginEnd="105dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:paddingTop="3dp"
                android:layout_marginStart="30dp"
                android:inputType="textPassword"
                android:background="@drawable/viewshape"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_npassword"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/reg_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:paddingEnd="10dp"
                android:layout_marginEnd="105dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:inputType="textPassword"
                android:background="@drawable/viewshape"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />

        </GridLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reg_submit"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:background="@drawable/button_background_shape"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

    </LinearLayout>
    </ScrollView>
</LinearLayout>