<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="3dp"
    android:paddingEnd="2dp"
    tools:context=".TaskActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/task_activity_background"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patient"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/patient_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="95dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:paddingEnd="10dp"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_name"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/hospital_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="95dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:paddingEnd="10dp"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spo2"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/spo2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="95dp"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heart_nrate"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/heart_rate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="95dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:paddingEnd="10dp"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_ntemp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/body_temp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="95dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mrt"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/mrt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="95dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:paddingEnd="10dp"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_npressure"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/blood_pressure"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="95dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rr"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/rr"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="95dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:paddingEnd="10dp"
                    android:inputType="text"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
            </GridLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/pdf"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_background_shape"
                    android:text="@string/pdf"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="120dp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>